--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "libphonenumber-js": "^1.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.7",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
