--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "WaLinks",
-  "name": "WaLink Generator",
+  "short_name": "WhatsApp Link",
+  "name": "WhatsApp Link Generator",
   "icons": [
     {
       "src": "favicon.ico",
