--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wte",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://PrimeSavant.github.io/walink-maker-es",
+  "homepage": "https://walink.pro",
   "dependencies": {
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
