--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "wte",
+  "name": "walink",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://walink.pro",
+  "homepage": "./",
   "dependencies": {
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
