V2: +new design +message field +copy

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "WhatsApp Link",
-  "name": "WhatsApp Link Generator",
+  "short_name": "WaLink.Pro",
+  "name": "WaLink.Pro",
   "icons": [
     {
       "src": "favicon.ico",
